--- a/portfolio/css/responsivo.css
+++ b/portfolio/css/responsivo.css
@@ -2,7 +2,9 @@
    #menu {
        display: none;
    }
-   
+   header div{
+       width: 100%;
+   }
    .container {
        width: 100%;
    }
@@ -15,15 +17,28 @@
    }
    section {
        width: 100%;
+       padding: 20px;
    }
    .polaroid {
        width: 40%;
+       border-radius: 50%;
+       padding: 2px; 
+       transform: none;
+   }
+   .polaroid:hover {
+        animation: none;
+
    }
    aside {
        width: 100% !important;
        margin: 0 !important;
+       /* text-align centraliza na tela elementos do tipo TEXTO e INLINE */
+       text-align: center;
    }
    #burger {
         display: block;
+   }
+    .maquina-de-escrever {
+    width: auto;
    }
 }
