--- a/portfolio/css/geral.css
+++ b/portfolio/css/geral.css
@@ -3,6 +3,7 @@
     font-family: Poppins;
     src:url(../fonts/Poppins-Regular.ttf) format("truetype");
 }
+
 :root{
     /* conceito de variáveis em CSS abaixo */
     --azul-medio: #24263B;
@@ -10,27 +11,34 @@
     --cor-menu-hover: #FF4A57;
     --cor-menu: #FFFFFF
 }
+
 body{
     background: var(--azul-medio);
     margin: 0;
     padding: 0;
     font-family: Poppins;
 }
+
 header{
     background: var(--azul-escuro);
     padding: 30px 0;
+    /* workaround - display:inline-table vai corrigir o problema do scroll não pintar o fundo do header, porém nao vai esticar 100% em tela cheia */
+    display: inline-table;
+    width: 100%;
 }
+
 header div{
    /* border: 1px solid red;  */
    width: 1170px;
    margin: 0 auto; /*centraliza a div na tela*/
    }
 
-/* ----------ESTRUTURA DO MENU---------- */
+/* ---------------ESTRUTURA DO MENU--------------- */
 #menu{
     /* border: 1px solid white; */
     float: right;
 }
+
 #menu a{
     color: var(--cor-menu);
     text-decoration: none;
@@ -43,6 +51,7 @@ header div{
 #menu a:hover{
     color: var(--cor-menu-hover)
 }
+
 #menu a.ativo{
     background: var(--cor-menu-hover);
     color: var(--cor-menu);
@@ -58,6 +67,7 @@ header div{
     float: right;
     margin-right: 10px;
 }
+
 #burger div{
     width: 80%;
     border-bottom: 1px solid white;
@@ -78,6 +88,7 @@ header div{
     display: flex;
     align-items: center;
 }
+
 section{
     /* border: 1px solid red; */
     width: 100%;
@@ -88,14 +99,17 @@ aside{
     display: inline-block;
     /* alinhar os elementos no topo */
     vertical-align: top;
+
 }
 aside:first-child{
     width: 660px;
     margin-right: 100px;
 }
+
 aside:last-child{
     width: 400px;
 }
+
 @keyframes efeito-logotipo {
     16.65% {
       -webkit-transform: skew(-12deg);
@@ -122,6 +136,7 @@ aside:last-child{
       transform: skew(0);
     }
   }
+
   .efeito-logotipo {
     display: inline-block;
     vertical-align: middle;
@@ -131,6 +146,7 @@ aside:last-child{
     -webkit-transform-origin: 0 100%;
     transform-origin: 0 100%;
   }
+  
   .efeito-logotipo:hover, .efeito-logotipo:focus, .efeito-logotipo:active {
     -webkit-animation-name: efeito-logotipo;
     animation-name: efeito-logotipo;
