--- a/portfolio/css/responsivo.css
+++ b/portfolio/css/responsivo.css
@@ -1,6 +1,16 @@
 @media screen and (max-width: 900px) {
    #menu {
        display: none;
+       float: none;
+       margin-top: 10px;
+       position: absolute;
+       width: 100%;
+
+   }
+   #menu a {
+       display: block;
+       text-align: center;
+       background: var(--azul-escuro);
    }
    header div{
        width: 100%;
